--- a/test/index.html
+++ b/test/index.html
@@ -47,10 +47,10 @@
                 exports: 'componentHandler'
             }
         },
-        baseUrl: '/'
+        baseUrl: '/test/'
     };
 </script>
 
-<script src="../bower_components/requirejs/require.js" data-main="test/mochaRunner.js"></script>
+<script src="../bower_components/requirejs/require.js" data-main="mochaRunner.js"></script>
 </body>
 </html>
