in the middle of configuring build process

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO List</title>
+    <!--- build:[src] app-built.min.js -->
     <script src="bower_components/requirejs/require.js" data-main="app/app"></script>
-    <link rel="stylesheet" href="bower_components/material-design-lite/material.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- /build -->
+    <!-- build:css styles/vendor.min.css -->
+    <link rel="stylesheet" href="bower_components/material-design-lite/material.css">
+    <!-- endbuild -->
+    <!-- build:css styles/main.min.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 <div class="mdl-layout mdl-js-layout">
@@ -45,6 +51,5 @@
         </div>
     </main>
 </div>
-
 </body>
 </html>
