finally finish configuring build process

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO List</title>
-    <!--- build:[src] app-built.min.js -->
+    <!-- process:js scripts/app-built.min.js -->
     <script src="bower_components/requirejs/require.js" data-main="app/app"></script>
-    <!-- /build -->
+    <!-- /process -->
     <!-- build:css styles/vendor.min.css -->
     <link rel="stylesheet" href="bower_components/material-design-lite/material.css">
     <!-- endbuild -->
