minor style change

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <input class="mdl-textfield__input" type="text" id="search">
                     <label class="mdl-textfield__label" for="search"></label>
                 </div>
-                <button type="button" class="mdl-button mdl-js-button mdl-button--fab">
+                <button type="button" class="mdl-button mdl-js-button">
                     <i class="material-icons">clear</i>
                 </button>
                 <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="search-in-active">
