--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </form>
             <div id="todos">
                 <div id="count">
-                    1 активных | 0 в архиве
+                    <span id="active-count"></span> активных | <span id="archive-count"></span> в архиве
                 </div>
                 <ul>
                 </ul>
