use templates instead of rendering manually. Add test for async render function

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                 <div id="count">
                     <span id="active-count"></span> активных | <span id="archive-count"></span> в архиве
                 </div>
-                <ul>
-                </ul>
+                <div id="items"></div>
             </div>
             <form id="search-form">
                 <div class="mdl-textfield mdl-js-textfield">
