--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Mocha Test Runner</title>
     <link rel="stylesheet" href="../bower_components/mocha/mocha.css" />
+    <script type="text/javascript" src="../bower_components/Element.closest/closest.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
