--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 <div class="mdl-layout mdl-js-layout">
     <main>
         <div id="todos-app">
-            <form id="add-form" class="">
+            <div id="add-form">
                 <div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="new">
                     <label class="mdl-textfield__label" for="new">Что сделать</label>
                 </div>
-                <button type="button" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                <button type="button" class="mdl-button mdl-js-button add-form__btn-js mdl-button--raised mdl-button--colored">
                     Добавить
                 </button>
-            </form>
+            </div>
             <div id="todos">
             </div>
             <form id="search-form">
