finish search module

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div id="todos">
             </div>
-            <form id="search-form">
+            <div id="search-form">
                 <div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" type="text" id="search">
                     <label class="mdl-textfield__label" for="search"></label>
@@ -42,10 +42,10 @@
                     <i class="material-icons">clear</i>
                 </button>
                 <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="search-in-active">
-                    <input type="checkbox" id="search-in-active" class="mdl-switch__input" checked>
+                    <input type="checkbox" id="search-in-active" class="mdl-switch__input">
                     <span class="mdl-switch__label">Искать в активных</span>
                 </label>
-            </form>
+            </div>
         </div>
     </main>
 </div>
